# ARC

./: .gitignore  CMakeLists.txt  README.md  arc.hpp
genious_cache/: belady.hpp  main.cpp
include/: arc.hpp  cache_dir.hpp
src/: main.cpp
testing/: compare.py  create_input.py  testing.cpp
